--- a/lib/VotoLegal/I18N/i_default.po
+++ b/lib/VotoLegal/I18N/i_default.po
@@ -154,6 +154,9 @@ msgstr "Voto legal - Recibo provisório"
 msgid "email_2_captured_subject"
 msgstr "Somos Rede - Recibo provisório"
 
+msgid "email_3_captured_subject"
+msgstr "Campanha PSOL - Recibo provisório"
+
 msgid "donation_daily_reached"
 msgstr "Limite de doação diário para o CPF atingido. Caso você tenha algum boleto ainda em aberto, o valor dele ainda é considerado."
 
