--- a/lib/VotoLegal/I18N/i_default.po
+++ b/lib/VotoLegal/I18N/i_default.po
@@ -188,7 +188,7 @@ msgid "feedback_form_text_2"
 msgstr "RESPONDER PESQUISA"
 
 msgid "feedback_form_url_2"
-msgstr "https://eokoe2.typeform.com/to/iyaBER"
+msgstr "https://eokoe2.typeform.com/to/iyaBER?number="
 
 msgid "msg_cc_paid_message_2"
 msgstr "Obrigado pela sua doação! Enviamos seu recibo para o e-mail informado. Queremos saber mais sobre você que está ajudando a construir essa campanha. Por favor, responda a essa pesquisa rápida. Isso vai nos ajudar muito!"
