Removing due date

--- a/lib/VotoLegal/I18N/i_default.po
+++ b/lib/VotoLegal/I18N/i_default.po
@@ -33,7 +33,7 @@ msgid "msg_invalid_cc_hash"
 msgstr "Hash do cartão não recebido ou inválido"
 
 msgid "msg_boleto_message"
-msgstr "<p>Boleto gerado com sucesso, faça o pagamento até __DUE_DATE__</p>"
+msgstr "<p>Obrigado pela sua doação! Quando o pagamento for confirmado, enviaremos um recibo para o e-mail informado.</p>"
 
 msgid "msg_boleto_link"
 msgstr "Visualizar boleto"
